--- a/router/package.json
+++ b/router/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ag-grid-community": "^25.1.0",
+    "ag-grid-vue": "^25.1.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-property-decorator": "^8.5.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.6.2"
   },
