--- a/router/package.json
+++ b/router/package.json
@@ -12,9 +12,11 @@
     "ag-grid-vue": "^25.1.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "node-sass": "^4.14.1",
     "vue": "^2.6.11",
     "vue-property-decorator": "^8.5.1",
     "vue-router": "^3.2.0",
+    "vuetify": "^2.4.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
@@ -28,7 +30,10 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
     "prettier": "^2.2.1",
-    "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "sass": "^1.32.0",
+    "sass-loader": "^10.0.0",
+    "vue-cli-plugin-vuetify": "~2.3.1",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.7.0"
   }
 }
